fixing dotenv import

--- a/debugging-exercises/exercise-1/package.json
+++ b/debugging-exercises/exercise-1/package.json
@@ -6,6 +6,7 @@
     "start": "node exercise-1.js"
   },
   "dependencies": {
-    "@knocklabs/node": "^0.6.6"
+    "@knocklabs/node": "^0.6.6",
+    "dotenv": "^16.4.5"
   }
 }
